
bin_PROGRAMS = afra
afra_SOURCES = src/afra.c  src/consense.c  src/graph.c  src/graph.h  src/io.c  src/io.h  src/matrix.c  src/matrix.h  src/quartet.c  src/quartet.h  src/global.h
afra_CPPFLAGS= -std=c11 -DNDEBUG
afra_CFLAGS  = $(OPENMP_CFLAGS) -Wall -Wextra -fms-extensions -Wno-microsoft -Wno-missing-field-initializers
